# fastapi-test

./: .env  Dockerfile  README.md  pyproject.toml
server/: main.py  server.py
